--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
 		"uglifyjs-webpack-plugin": "^2.2.0",
 		"url-loader": "^4.1.0",
 		"webpack": "^4.41.0",
-		"webpack-cli": "^3.3.9",
+		"webpack-cli": "^3.3.12",
 		"webpack-dev-server": "^3.8.1"
 	},
 	"dependencies": {
@@ -79,6 +79,7 @@
 		"leaflet": "^1.6.0",
 		"moment": "^2.24.0",
 		"mui-datatables": "^3.4.1",
+		"nodemon": "^2.0.13",
 		"rc-queue-anim": "^1.8.4",
 		"react-addons-update": "^15.6.3",
 		"react-autosuggest": "^10.0.2",
@@ -86,6 +87,7 @@
 		"react-big-calendar": "^0.31.0",
 		"react-bootstrap-sweetalert": "^5.1.9",
 		"react-chartjs-2": "^2.9.0",
+		"react-chat-bubble": "^0.8.7",
 		"react-content-loader": "^6.0.1",
 		"react-countup": "^4.3.3",
 		"react-credit-cards": "^0.8.2",
@@ -110,6 +112,8 @@
 		"react-quill": "^1.3.5",
 		"react-redux": "^7.2.0",
 		"react-router-dom": "^5.1.2",
+		"react-scrollable-feed": "^1.3.1",
+		"react-scrolling-list": "^1.0.0",
 		"react-select": "^4.0.2",
 		"react-sidebar": "^3.0.2",
 		"react-slick": "^0.28.0",
@@ -126,6 +130,7 @@
 		"redux-saga": "^1.1.3",
 		"screenfull": "^5.0.2",
 		"slick-carousel": "^1.8.1",
+		"socket.io-client": "^4.2.0",
 		"video-react": "^0.14.1",
 		"weather-icons": "^1.3.2"
 	}
